--- a/cmd/weekly-job/Dockerfile
+++ b/cmd/weekly-job/Dockerfile
@@ -1,25 +1,12 @@
-# ------------------------
-# Build stage
-# ------------------------
-FROM golang:1.21-alpine AS builder
+FROM golang:1.24-alpine
 
 WORKDIR /app
-
-RUN apk add --no-cache git
 
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN go build -o weekly-job cmd/weekly-job/main.go
 
-# ------------------------
-# Run stage
-# ------------------------
-FROM alpine:3.18
-
-WORKDIR /app
-
-COPY --from=builder /app/weekly-job .
+RUN go build -o weekly-job ./cmd/weekly-job/main.go
 
 CMD ["./weekly-job"]
