--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,41 +23,24 @@ services:
       retries: 5
 
   # ------------------------
-  # Cassandra
+  # Elasticsearch
   # ------------------------
-  cassandra:
-    image: cassandra:4.1
-    container_name: apartments-cassandra
-    ports:
-      - "9042:9042"
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2
+    container_name: apartments-es
     environment:
-      CASSANDRA_CLUSTER_NAME: ApartmentsCluster
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
     volumes:
-      - cassdata:/var/lib/cassandra
+      - esdata:/usr/share/elasticsearch/data
     healthcheck:
-      test: ["CMD-SHELL", "cqlsh -e 'DESCRIBE KEYSPACES'"]
+      test: ["CMD-SHELL", "curl -f http://localhost:9200 || exit 1"]
       interval: 10s
       timeout: 5s
-      retries: 10
-
-  # ------------------------
-  # Cassandra migrations
-  # ------------------------
-  cassandra-migrate:
-    image: cassandra:4.1
-    container_name: apartments-cassandra-migrate
-    depends_on:
-      cassandra:
-        condition: service_healthy
-    volumes:
-      - ./migrations/cassandra:/migrations
-    entrypoint: >
-      bash -c "
-      for f in /migrations/*.cql; do
-        echo Running $$f;
-        cqlsh cassandra 9042 -f $$f;
-      done
-      "
+      retries: 5
 
   # ------------------------
   # API
@@ -72,33 +55,16 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      cassandra:
+      elasticsearch:
         condition: service_healthy
     environment:
       POSTGRES_DSN: postgres://postgres:postgres@postgres:5432/apartments?sslmode=disable
-      CASSANDRA_HOST: cassandra
-      CASSANDRA_PORT: 9042
+      ELASTICSEARCH_URL: http://elasticsearch:9200
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 10s
       timeout: 5s
       retries: 5
-
-  # ------------------------
-  # Precompute job
-  # ------------------------
-  precompute:
-    build:
-      context: .
-      dockerfile: docker/precompute.Dockerfile
-    container_name: apartments-precompute
-    depends_on:
-      api:
-        condition: service_healthy
-    environment:
-      POSTGRES_DSN: postgres://postgres:postgres@postgres:5432/apartments?sslmode=disable
-      CASSANDRA_HOST: cassandra
-      CASSANDRA_PORT: 9042
 
   # ------------------------
   # Weekly notification job
@@ -113,9 +79,8 @@ services:
         condition: service_healthy
     environment:
       POSTGRES_DSN: postgres://postgres:postgres@postgres:5432/apartments?sslmode=disable
-      CASSANDRA_HOST: cassandra
-      CASSANDRA_PORT: 9042
+      ELASTICSEARCH_URL: http://elasticsearch:9200
 
 volumes:
   pgdata:
-  cassdata:
+  esdata:
